--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.12.0",
     "sonner": "^0.6.2",
     "typescript": "5.1.6",
     "typewriter-effect": "^2.20.1"
